Added application test health checks