@@ -37,14 +37,20 @@ public class XSKProjectDeploymentRule extends ExternalResource {
   @Override
   protected void before() throws Throwable {
     super.before();
-    Path resourcePath;
 
-    if (XSKProjectApplicationType.SAMPLE.equals(xskProjectApplicationType)) {
-      resourcePath = Path.of(Paths.get("").toAbsolutePath().getParent().getParent() + SAMPLES_DIR_NAME + applicationName);
-    } else {
-      URL resource = getClass().getResource(CUSTOM_APPS_DIR_NAME + applicationName);
-      String resourcePathString = Objects.requireNonNull(resource).getPath();
-      resourcePath = Path.of(resourcePathString);
+    Path resourcePath = null;
+
+    // TODO: Check if samples path could be set with ClassLoader
+
+    switch (xskProjectApplicationType) {
+      case SAMPLE:
+        resourcePath = Path.of(Paths.get("").toAbsolutePath().getParent().getParent() + SAMPLES_DIR_NAME + applicationName);
+        break;
+      case CUSTOM:
+        URL resource = getClass().getResource(CUSTOM_APPS_DIR_NAME + applicationName);
+        String resourcePathString = Objects.requireNonNull(resource).getPath();
+        resourcePath = Path.of(resourcePathString);
+        break;
     }
 
     projectDeployer.deploy(applicationName, resourcePath);
